- [x] Updated project to Java 17 and Gradle 7.4. Updated packages to the latest version, - [x] Enabled Java 17 preview, to support pattern matching expressions, - [x] Updated commands, events and requests to records. - [x] Used Java 17 formatted strings - [x] Removed redundant dependencies to gRPC and Protobuf packages. If they're not explicitly used, they could cause an issue if they're not aligned with ESDB client peer dependencies.
Fixes https://github.com/EventStore/advocacy/issues/192.

See related PR in the Advanced Training: https://github.com/EventStore/training-advanced-java/pull/10.